--- a/bitHopper/static/core.css
+++ b/bitHopper/static/core.css
@@ -21,10 +21,21 @@ table {
 	
 tr.pool_name td{
     border-bottom: 2px solid white;
+    font-size: 16px;
+    font-weight:bold;
+    text-align: right;
 }
 tr.pool_name td.name{
     border: 2px solid white;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight:bold;
+    text-align: left;
+}
+
+div.title {
+    border-bottom: 2px solid white;
+    font-size: 20px;
+    font-weight:bold;
 }
 
 .align_right {
