--- a/bitHopper/static/core.css
+++ b/bitHopper/static/core.css
@@ -32,6 +32,12 @@ tr.pool_name td.name{
     text-align: left;
 }
 
+tr.worker tr{
+    font-size: 16px;
+    font-weight:bold;
+    text-align: right;
+}
+
 div.title {
     border-bottom: 2px solid white;
     font-size: 20px;
