--- a/bitHopper/templates/pool.html
+++ b/bitHopper/templates/pool.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{%block title %} Workers {% endblock %}
+{%block title %} Pools {% endblock %}
 
 {%block body%}
 <div class=title>
