--- a/bitHopper/templates/index.html
+++ b/bitHopper/templates/index.html
@@ -9,5 +9,6 @@
 <br>
 
 <p> You probably want to configure some <a href="/worker">workers<a/> or view your <a href="/pool">pool status</a> </p>
+<p> You can also restrict access to certain <a href="/miners">miners</a></p>
 
 {% endblock %}
