--- a/bitHopper/templates/index.html
+++ b/bitHopper/templates/index.html
@@ -7,7 +7,7 @@
     Welcome to bitHopper!
 </div>
 <br>
-
+<p> The old style <a href="/stats">admin page</a> is available.</p>
 <p> You probably want to configure some <a href="/worker">workers<a/> or view your <a href="/pool">pool status</a> </p>
 <p> You can also restrict access to certain <a href="/miners">miners</a></p>
 
