--- a/bitHopper/templates/stats.html
+++ b/bitHopper/templates/stats.html
@@ -76,7 +76,7 @@
 			function getShares(payload, srv) {
 				shares = srv['shares'];
 
-				diff = payload["diffs"][srv["role"].substring(5,8)];
+				diff = payload["diffs"][srv["coin"]];
 				if (diff == undefined) { diff = payload["diffs"]["btc"]; }
 
 				return numberWithCommas(shares)
@@ -436,9 +436,8 @@
 							continue; //Skip info pools
 						}
 						
-						var htmlRepresentationOfShares = columns['Shares']['data'](payload, row, r);
-    						var intRepresentationOfShares = htmlRepresentationOfShares.replace(/[^0-9]/g, '');
-						if(intRepresentationOfShares == 0 || intRepresentationOfShares > 50000000) {
+    						var intRepresentationOfShares = row['shares']
+						if(intRepresentationOfShares > 50000000) {
 							continue;
 						}
 					}
